101-kittens-carousel-static-website-ec2/yeni-kittens-cfn.yml
AWSTemplateFormatVersion: 2010-09-09
Description: |
  CloudFormation Template for Kittens Carousel Static Website on EC2.
  This template deploys Kittens Carousel Static Website on Amazon Linux 2
  (ami-026dea5602e368e96) EC2 Instance with custom security group
  allowing http connections on port 80. Kittens Carousel Static Website
  is downloaded from Github repository, then deployed on Apache Web Server
Resources:
  WebserverSecGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "Enable HTTP for Apache Web Server" # Required
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
  webserverhost:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-0f34c5ae932e6f0e4
      InstanceType: t2.micro
      KeyName: yeni-key-pair
      SecurityGroupIds:
        - !Ref WebserverSecGroup
      Tags:
        - Key: Name
          Value: !Sub Web Server of ${AWS::StackName} Stack
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          yum update -y
          yum install httpd -y
          cd /var/www/html
          wget https://raw.githubusercontent.com/merve-bugaz/my-projects/main/101-kittens-carousel-static-website-ec2/static-web/index.html
          wget https://raw.githubusercontent.com/merve-bugaz/my-projects/main/101-kittens-carousel-static-website-ec2/static-web/cat0.jpg
          wget https://raw.githubusercontent.com/merve-bugaz/my-projects/main/101-kittens-carousel-static-website-ec2/static-web/cat1.jpg
          wget https://raw.githubusercontent.com/merve-bugaz/my-projects/main/101-kittens-carousel-static-website-ec2/static-web/cat2.jpg
          systemctl start httpd
          systemctl enable httpd
Outputs:
  WebsiteURL:
    Value: !Sub
      - http://${PublicAddress}
      - PublicAddress: !GetAtt webserverhost.PublicDnsName
    Description: Kittens Carousel Application URL
